# azik_generator

./: .gitignore  Cargo.toml  README.md  bacon.toml  clippy.toml  table.txt  tables.txt
.github/workflows/: rust.yml
generate_kana_table/: Cargo.toml  LICENSE
generate_kana_table/src/: generate_kana_table.rs  lib.rs
generate_kana_table/src/generate_kana_table/: azik_config.rs  deserealizer.rs  gen_corvus_skk_table.rs  gen_google_ime_table.rs  gen_kana.rs  gen_kana_table.rs  gen_vowel.rs
src/: generate_kana_table.rs  main.rs
src/generate_kana_table/: assignable_tokens.rs  azik_config.rs  deserealizer.rs  deserialize.rs  gen_consonant.rs  gen_kana.rs  gen_kana_table.rs  gen_kana_table_test.rs  gen_vowel.rs
