[package]
name = "azik_generator"
license = "MIT"
authors = ["Maki <maki111000664455@gmail.com>"]
description = "Generate Google IME Setting file"
version = "0.1.2"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
serde_json = "1.0.137"
clap = { version = "4.5.27", features = ["derive"] }
