[package]
name = "azik_generator"
license = "MIT"
authors = ["Maki <maki111000664455@gmail.com>"]
description = "Generate Google IME Setting file"
version = "0.1.4"
edition = "2021"

[workspace]
members = ["generate_kana_table"]

[dependencies]
generate_kana_table = { path = "generate_kana_table" }
