[package]
name = "generate_kana_table"
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["Maki <maki111000664455@gmail.com>"]
description = "Generate Google IME Setting file"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
serde_json = "1.0.137"
clap = { version = "4.5.27", features = ["derive"] }
regex = "1.11.1"
