[package]
name = "generate_kana_table"
version = "0.1.3"
edition = "2021"
license = "MIT"
authors = ["Maki <maki111000664455@gmail.com>"]
description = "Generate Google IME Setting file"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
serde_json = "1.0.140"
clap = { version = "4.5.31", features = ["derive"] }
regex = "1.11.1"
